--- a/config/sites/default/core.entity_view_display.paragraph.education.default.yml
+++ b/config/sites/default/core.entity_view_display.paragraph.education.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.education.field_education_institution
+    - field.field.paragraph.education.field_education_institution_ref
     - field.field.paragraph.education.field_education_type
     - paragraphs.paragraphs_type.education
 id: paragraph.education.default
@@ -11,16 +11,16 @@ targetEntityType: paragraph
 bundle: education
 mode: default
 content:
-  field_education_institution:
-    weight: 1
-    label: inline
+  field_education_institution_ref:
+    weight: 0
+    label: above
     settings:
-      link_to_entity: false
+      link: true
     third_party_settings: {  }
-    type: string
+    type: entity_reference_label
     region: content
   field_education_type:
-    weight: 0
+    weight: 1
     label: inline
     settings:
       link_to_entity: false
