TH-284 hours block basic styling

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.yml
@@ -63,20 +63,23 @@ link_list:
     - text: "Pediatrics"
       link: "/"
 hours:
-  - title: "Monday"
-    hours: "8 a.m. - 5 p.m."
-  - title: "Tuesday"
-    hours: "8 a.m. - 5 p.m."
-  - title: "Wednesday"
-    hours: "8 a.m. - 5 p.m."
-  - title: "Thursday"
-    hours: "8 a.m. - 5 p.m."
-  - title: "Friday"
-    hours: "12 p.m. - 8 p.m."
-  - title: "Saturday"
-    hours: "8 a.m. - 8 p.m."
-  - title: "Sunday"
-    hours: "Closed"
+  label: "Hours"
+  text: "Hours may be affected by holidays"
+  hours:
+    - title: "Monday"
+      hours: "8 a.m. - 5 p.m."
+    - title: "Tuesday"
+      hours: "8 a.m. - 5 p.m."
+    - title: "Wednesday"
+      hours: "8 a.m. - 5 p.m."
+    - title: "Thursday"
+      hours: "8 a.m. - 5 p.m."
+    - title: "Friday"
+      hours: "12 p.m. - 8 p.m."
+    - title: "Saturday"
+      hours: "8 a.m. - 8 p.m."
+    - title: "Sunday"
+      hours: "Closed"
 boxes:
   - title: "McGlinn Cancer Institute"
     text: "Our renowned team provides unsurpassed expertise, leading-edge technology, and exceptional comprehensie transplant care"
