--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "drupal/geolocation": "^3.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/media_entity_browser": "^2.0",
+        "drupal/menu_block": "^1.5",
         "drupal/metatag": "^1.10",
         "drupal/migrate_devel": "^1.2@beta",
         "drupal/migrate_plus": "^4.2",
