--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -50,6 +50,7 @@ module:
   media_entity_browser: 0
   media_entity_browser_media_library: 0
   media_library: 0
+  menu_block: 0
   menu_ui: 0
   metatag: 0
   migrate: 0
@@ -87,6 +88,7 @@ module:
   towerhealth_misc: 0
   towerhealth_msow_migration: 0
   towerhealth_rating_migration: 0
+  twig_tweak: 0
   unified_twig_ext: 0
   update: 0
   user: 0
@@ -106,7 +108,6 @@ theme:
   bartik: 0
   seven: 0
   tower_health: 0
-  emulsify: 0
 profile: config_installer
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
