modifications to location hero

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero~no-img.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero~no-img.yml
@@ -16,9 +16,7 @@ phones:
       - number: 484-628-4357
         label: 484-628-HELP (4357)
       - number: 866-988-4357
-img:
-  src: "../../images/th-hero-image.jpg"
-  alt: "Alternative Text"
+img: null
 classes: "growth top-left"
 breadcrumb:
   1:
