style location hero without image

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.yml
@@ -1,5 +1,5 @@
 type: "Hospital"
-name: "Reading Hospital - Tower Health"
+name: "Reading Hospital"
 address_1: "420 S. Fifth Avenue"
 address_2: "West Reading, PA 19611"
 directions:
