--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.yml
@@ -29,7 +29,7 @@ hero:
           label: 484-628-HELP (4357)
         - number: 866-988-4357
   img:
-    src: "../../images/th-hero-image.jpg"
+    src: "../../images/locations/Reading-Hospital.jpg"
     alt: "Alternative Text"
   classes: "growth top-left"
 omw_callout:
