--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/image-teaser-banner.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/image-teaser-banner.yml
@@ -1,5 +1,5 @@
 img:
-  src: "https://placeimg.com/1000/800/any"
+  src: "../../images/locations/stchris.jpg"
   alt: "Alternative Text"
 title: "Tower Health and Drexel University to Assume Ownership of St. Christopher's Hospital for Children"
 text: "Tower Health and Drexel University have entered into an agreement to acquire St. Christopher's Hospital for Children, ensuring that the health care provider will continue its role as a vital resource for families in North Philadelphia and the region following its sale in bankruptcy court"
