--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/image-teaser-banner~reverse.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/image-teaser-banner~reverse.yml
@@ -1,3 +1,4 @@
+orientation: reverse
 img:
   src: "../../images/locations/stchris.jpg"
   alt: "Alternative Text"
@@ -5,8 +6,4 @@ title: "Tower Health and Drexel University to Assume Ownership of St. Christophe
 text: "Tower Health and Drexel University have entered into an agreement to acquire St. Christopher's Hospital for Children, ensuring that the health care provider will continue its role as a vital resource for families in North Philadelphia and the region following its sale in bankruptcy court"
 links:
   - url: "/"
-    text: "Link 1"
-  - url: "/"
-    text: "Link 2"
-  - url: "/"
-    text: "Link 3"
+    text: "About the Acquisition"
