--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.yml
@@ -28,7 +28,7 @@ hero:
     - number: "866-988-4357"
       label: "866-988-4357"
   img:
-    src: "../../images/th-hero-image.jpg"
+    src: "../../images/locations/Reading-Hospital.jpg"
     alt: "Alternative Text"
   classes: "growth top-left"
 link_list:
@@ -141,7 +141,7 @@ boxes:
       alt: "Alternative text"
 image_callout:
   img:
-    src: "https://placeimg.com/1000/800/any"
+    src: "../../images/locations/stchris.jpg"
     alt: "Alternative Text"
   title: "Tower Health and Drexel University to Assume Ownership of St. Christopher's Hospital for Children"
   text: "Tower Health and Drexel University have entered into an agreement to acquire St. Christopher's Hospital for Children, ensuring that the health care provider will continue its role as a vital resource for families in North Philadelphia and the region following its sale in bankruptcy court"
