update box link styles & images

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.yml
@@ -5,7 +5,7 @@ boxes:
       text: "About the Institute"
       url: "/"
     img:
-      src: "https://placeimg.com/600/400/any"
+      src: "../../images/AdobeStock_193543982_Preview.jpeg"
       alt: "Alternative text"
   - title: "Tower Health Transplant Institute"
     text: "Our renowned team provides unsurpassed expertise, leading-edge technology, and exceptional comprehensie transplant care"
@@ -13,21 +13,21 @@ boxes:
       text: "About the Institute"
       url: "/"
     img:
-      src: "https://placeimg.com/600/400/any"
+      src: "../../images/AdobeStock_271545252_Preview.jpeg"
       alt: "Alternative text"
   - title: "Miller Regional Heart Center"
     text: "Our renowned team provides unsurpassed expertise, leading-edge technology, and exceptional comprehensie transplant care"
     link:
-      text: "About the Institute"
+      text: "About the Center"
       url: "/"
     img:
-      src: "https://placeimg.com/600/400/any"
+      src: "../../images/AdobeStock_239096192_Preview.jpeg"
       alt: "Alternative text"
   - title: "Weight Loss Surgery & Wellness Center"
     text: "Our renowned team provides unsurpassed expertise, leading-edge technology, and exceptional comprehensie transplant care"
     link:
-      text: "About the Institute"
+      text: "About the Center"
       url: "/"
     img:
-      src: "https://placeimg.com/600/400/any"
+      src: "../../images/AdobeStock_204599156_Preview.jpeg"
       alt: "Alternative text"
