--- a/docroot/themes/custom/tower_health/tower_health.libraries.yml
+++ b/docroot/themes/custom/tower_health/tower_health.libraries.yml
@@ -2,6 +2,8 @@ global:
   css:
     theme:
       dist/style.css: {}
+      'https://use.typekit.net/aqk4svu.css': { type: external }
+
   js:
     dist/00-base/global/animations/animation.js: {}
     components/js/modernizer-custom.js: {}
@@ -11,11 +13,11 @@ main-menu:
     dist/02-molecules/menus/main-menu/main-menu.js: {}
   dependencies:
     - core/drupal
-    
+
 site-header:
   js:
     dist/03-organisms/site/site-header/site-header.js: {}
-    
+
 autocomplete:
   js:
     dist/02-molecules/autocomplete-dropdown/autocomplete.js: {}
@@ -31,7 +33,7 @@ accordion:
 tabs:
   js:
     dist/02-molecules/menus/tabs/tabs.js: {}
-    
+
 toggle-tips:
   js:
     dist/02-molecules/toggle-tip/toggle-tip.js: {}
