update location teaser

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.yml
@@ -1,6 +1,6 @@
 location:
   img:
-    src: "https://placeimg.com/400/400/any"
+    src: "../../images/locations/imgs-location-callout-mcglinn-cancer-institute.jpg"
     alt: "Alternative Text"
   details:
     name: "McGlinn Cancer Institute"
