--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.yml
@@ -37,7 +37,7 @@ filter_radios:
       label: "Advanced Practice Providers Only"
 providers:
   - img:
-      src: "https://www.placeimg.com/500/500/any"
+      src: "../../images/people/Roland-Donald.jpg"
       alt: "Alternative Text"
     classes: "growth bottom-right"
     link:
@@ -52,7 +52,7 @@ providers:
       language: "English"
     type: "provider"
   - img:
-      src: "https://www.placeimg.com/500/500/any"
+      src: "../../images/people/abdel-wahab-amir.jpg"
       alt: "Alternative Text"
     classes: "growth bottom-right"
     link:
@@ -66,9 +66,7 @@ providers:
       location: "Wyomissing, PA"
       language: "English"
     type: "provider"
-  - img:
-      src: "https://www.placeimg.com/500/500/any"
-      alt: "Alternative Text"
+  - img: null
     classes: "growth bottom-right"
     link:
       url: "/"
@@ -78,6 +76,107 @@ providers:
       name: "Monique Lisa Abner, MD"
       specialties: "Plastic Surgery"
       focus: "Wound healing, Hyperbaric Medicine"
+      location: "Wyomissing, PA"
+      language: "English"
+    type: "provider"
+  - img:
+      src: "../../images/people/Roland-Donald.jpg"
+      alt: "Alternative Text"
+    classes: "growth bottom-right"
+    link:
+      url: "/"
+      text: "Request an Appointment"
+      icon: "th-cal.svg"
+    details:
+      name: "Donald E. Roland, MD, DMD"
+      specialties: "Oral and Maxillofacial Surgery"
+      focus: "Cranio-facial clefts, Rhinoplasty, Genioplasty"
+      location: "Pottstown, PA"
+      language: "English"
+    type: "provider"
+  - img:
+      src: "../../images/people/abdel-wahab-amir.jpg"
+      alt: "Alternative Text"
+    classes: "growth bottom-right"
+    link:
+      url: "/"
+      text: "Request an Appointment"
+      icon: "th-cal.svg"
+    details:
+      name: "Amir A. Abdel-Wahab, MD, FAAP"
+      specialties: "Pediatrics"
+      focus: "Child Development, Preventative Medicine"
+      location: "Wyomissing, PA"
+      language: "English"
+    type: "provider"
+  - img: null
+    classes: "growth bottom-right"
+    link:
+      url: "/"
+      text: "Request an Appointment"
+      icon: "th-cal.svg"
+    details:
+      name: "Monique Lisa Abner, MD"
+      specialties: "Plastic Surgery"
+      focus: "Wound healing, Hyperbaric Medicine"
+      location: "Wyomissing, PA"
+      language: "English"
+    type: "provider"
+  - img:
+      src: "../../images/people/Roland-Donald.jpg"
+      alt: "Alternative Text"
+    classes: "growth bottom-right"
+    link:
+      url: "/"
+      text: "Request an Appointment"
+      icon: "th-cal.svg"
+    details:
+      name: "Donald E. Roland, MD, DMD"
+      specialties: "Oral and Maxillofacial Surgery"
+      focus: "Cranio-facial clefts, Rhinoplasty, Genioplasty"
+      location: "Pottstown, PA"
+      language: "English"
+    type: "provider"
+  - img:
+      src: "../../images/people/abdel-wahab-amir.jpg"
+      alt: "Alternative Text"
+    classes: "growth bottom-right"
+    link:
+      url: "/"
+      text: "Request an Appointment"
+      icon: "th-cal.svg"
+    details:
+      name: "Amir A. Abdel-Wahab, MD, FAAP"
+      specialties: "Pediatrics"
+      focus: "Child Development, Preventative Medicine"
+      location: "Wyomissing, PA"
+      language: "English"
+    type: "provider"
+  - img: null
+    classes: "growth bottom-right"
+    link:
+      url: "/"
+      text: "Request an Appointment"
+      icon: "th-cal.svg"
+    details:
+      name: "Monique Lisa Abner, MD"
+      specialties: "Plastic Surgery"
+      focus: "Wound healing, Hyperbaric Medicine"
+      location: "Wyomissing, PA"
+      language: "English"
+    type: "provider"
+  - img:
+      src: "../../images/people/abdel-wahab-amir.jpg"
+      alt: "Alternative Text"
+    classes: "growth bottom-right"
+    link:
+      url: "/"
+      text: "Request an Appointment"
+      icon: "th-cal.svg"
+    details:
+      name: "Amir A. Abdel-Wahab, MD, FAAP"
+      specialties: "Pediatrics"
+      focus: "Child Development, Preventative Medicine"
       location: "Wyomissing, PA"
       language: "English"
     type: "provider"
