--- a/config/sites/default/migrate_plus.migration.towerhealth_providers_specialties_ref.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers_specialties_ref.yml
@@ -1,20 +1,20 @@
-uuid: f45b8b04-88dd-4f61-979e-158d1fa3288f
+uuid: fbdb2b7b-15be-4805-83ce-4cd49e73886d
 langcode: en
 status: true
 dependencies:
   enforced:
     module:
       - towerhealth_msow_migration
-id: towerhealth_providers_special_interests
+id: towerhealth_providers_specialties_ref
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: null
-label: 'Import tower health provider clinical areas of interest references'
+label: 'Import tower health provider specialties referencees'
 source:
-  plugin: provider_special_interest_refs
-  path: 'public://directory/Find_Provider_Dir_Practitioner_Interests.txt'
+  plugin: provider_specialties_refs
+  path: 'public://directory/Find_Provider_Dir_Practitioner_Specialties.txt'
 process:
   nid:
     -
@@ -47,19 +47,20 @@ process:
       index:
         - 0
         - value
-  _area_of_interest:
+  _medical_specialty:
     -
       plugin: towerhealth_lookup_taxonomy_term
-      lookup_field: field_area_of_interest_msow_id
-      source: msow_ids
-      vid: area_of_interest
+      lookup_field: name
+      source: specialty_terms
+      vid: medical_specialty
     -
       plugin: skip_on_empty
       method: row
-  field_area_interest_ref:
+  field_medical_specialties_ref:
     -
       plugin: towerhealth_entity_ref_values
-      source: '@_area_of_interest'
+      source: '@_medical_specialty'
+  field_profile_board_certified: board_certified
 destination:
   plugin: 'entity:node'
 migration_dependencies: null
