begin restructure of filters based on form section

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.yml
@@ -9,11 +9,10 @@ header:
     3:
       text: "3rd Level"
   title: Find a Location
-  class: "listing"
-search:
-  label: "Search Locations"
-  placeholder: "Search by Name"
-  button: "Search Locations"
+  form:
+    label: "Search Locations"
+    placeholder: "Search by Name"
+    button: "Search Locations"
 filters:
   - label: "Zip Code"
     placeholder: "00000"
