--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -51,6 +51,7 @@ module:
   media_entity_browser_media_library: 0
   media_library: 0
   menu_block: 0
+  menu_item_extras: 0
   menu_ui: 0
   metatag: 0
   migrate: 0
