--- a/config/sites/default/block.block.exposedformfind_a_providerfind_doctor.yml
+++ b/config/sites/default/block.block.exposedformfind_a_providerfind_doctor.yml
@@ -19,5 +19,5 @@ settings:
   label: ''
   provider: views
   label_display: visible
-  views_label: 'Find a doctor'
+  views_label: 'Find a Provider'
 visibility: {  }
