--- a/config/sites/default/core.entity_form_display.menu_link_content.main.default.yml
+++ b/config/sites/default/core.entity_form_display.menu_link_content.main.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.menu_link_content.main.field_main_autocomplete_form
     - field.field.menu_link_content.main.field_main_link_type
     - system.menu.main
   module:
@@ -13,6 +14,12 @@ targetEntityType: menu_link_content
 bundle: main
 mode: default
 content:
+  field_main_autocomplete_form:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_main_link_type:
     weight: 1
     settings: {  }
@@ -29,7 +36,7 @@ content:
     third_party_settings: {  }
   view_mode:
     type: menu_item_extras_view_mode_selector_select
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
