restyle pager and replace duplicate

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.yml
@@ -1,4 +1,7 @@
-providers:
+results_shown: 1-10
+results_count: 128
+results_term: Heart
+teasers:
   - img:
       src: "https://www.placeimg.com/500/500/any"
       alt: "Alternative Text"
