--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.yml
@@ -65,6 +65,8 @@ form_sections:
           - title: < 25 Miles
 results_shown: 1-10
 results_count: 128
+emergency_banner: If this is a medical emergency, please call 911.
+
 locations:
   - img:
       src: "../../images/locations/teaser-mcglinn.jpg"
