--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/search/search.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/search/search.yml
@@ -40,21 +40,6 @@ teasers:
       icon: "th-find-hospital.svg"
     type: article
   - img:
-      src: "../../images/people/abdel-wahab-amir.jpg"
-      alt: "Alternative Text"
-    classes: "growth bottom-right"
-    link:
-      url: "/"
-      text: "Request an Appointment"
-      icon: "th-cal.svg"
-    details:
-      name: "Amir A. Abdel-Wahab, MD, FAAP"
-      specialties: "Pediatrics"
-      focus: "Child Development, Preventative Medicine"
-      location: "Wyomissing, PA"
-      language: "English"
-    type: "provider"
-  - img:
       src: "../../images/locations/teaser-mcglinn.jpg"
       alt: "Alternative Text"
     details:
@@ -68,6 +53,14 @@ teasers:
       text: "Directions"
       icon: "th-find-hospital.svg"
     type: location
+  - details:
+      title: "Giving to Tower Health"
+      text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit leo vitae nunc volutpat tristique at et lorem. Pellentesque non consectetur tellus, quis rhoncus odio. Duis consequat sem ac accumsan dictum. Aliquam rutrum non nibh vel commodo. Cras eleifend dapibus ultrices...."
+    link:
+      url: "/"
+      text: "Read More"
+      icon: "th-find-hospital.svg"
+    type: basic
   - img:
       src: "../../images/locations/teaser-reading.jpg"
       alt: "Alternative Text"
@@ -82,6 +75,21 @@ teasers:
       text: "Directions"
       icon: "th-find-hospital.svg"
     type: location
+  - img:
+      src: "../../images/people/abdel-wahab-amir.jpg"
+      alt: "Alternative Text"
+    classes: "growth bottom-right"
+    link:
+      url: "/"
+      text: "Request an Appointment"
+      icon: "th-cal.svg"
+    details:
+      name: "Amir A. Abdel-Wahab, MD, FAAP"
+      specialties: "Pediatrics"
+      focus: "Child Development, Preventative Medicine"
+      location: "Wyomissing, PA"
+      language: "English"
+    type: "provider"
 cta:
   title: "Need Help? We're Here."
   text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet dolor dapibus, mollis diam id, euismod urna. Nulla finibus lorem in massa semper, at ultrices qam interdum. Praesent nec ante id lorem cursus."
